{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "Deployment",
            "id": "7948c2e8-46cd-4301-8860-bd135b887984",
            "actions": [
                {
                    "name": "MoveForwardSwordsmen",
                    "type": "Button",
                    "id": "1267041b-e094-4f2a-b3a2-521f482bab54",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveForwardPolearm",
                    "type": "Button",
                    "id": "d4132929-1065-46cc-ac02-4ec4313321b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveForwardRanger",
                    "type": "Button",
                    "id": "8bdeccfd-f8ff-4155-a7c5-cedfdd11ee4f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveForwardMage",
                    "type": "Button",
                    "id": "eace02d2-d051-4090-a7dd-f1ebd6e51ab2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "fb0b2fa3-0667-46ec-9dc4-25d189d2f20f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Block",
                    "type": "Button",
                    "id": "e11aea90-c0e5-4f6c-934e-f59d29513168",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Ability1",
                    "type": "Button",
                    "id": "77570bd6-ae42-4638-b994-3838c107afee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Ability2",
                    "type": "Button",
                    "id": "d780350f-7c48-4541-844c-6f415c752070",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Ability3",
                    "type": "Button",
                    "id": "c1ca6453-63f1-4fd0-a53f-cc2fcb14d831",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Ability4",
                    "type": "Button",
                    "id": "7e4ed41c-9f90-4c29-9ce0-e51b36f32ad9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "0e20fb8a-cd01-4d50-b180-0e4b08a29920",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FireArrow",
                    "type": "Button",
                    "id": "fee49dab-3858-4181-9bc0-e19060800b80",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "B",
                    "type": "Button",
                    "id": "e17969b0-bafc-4343-95f4-e1037b654d83",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LockOn",
                    "type": "Button",
                    "id": "74ec5d1c-56a3-48e3-9f48-eabfaa5344c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "c6f39c15-cee3-4bf9-93f5-98e55e0a9054",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "55c13208-2173-4ae8-bf33-16a19acef558",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AnyKey",
                    "type": "Button",
                    "id": "2fb05d8f-9c1a-4fd6-b360-1ee17017b93a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "0775ec04-c299-4dd0-a1f8-8a52e5da0e9f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Plus",
                    "type": "Button",
                    "id": "ae4f15a0-62ab-4efc-be3d-a4f0e3db8361",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Minus",
                    "type": "Button",
                    "id": "2171ae07-d30b-4266-b557-7e60bb14a665",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "73f0e19f-6fab-41c3-b1ab-3c7af99ea98a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftClickHeld",
                    "type": "Button",
                    "id": "c804d344-1d3b-412e-ae05-2542b1c9b5ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightClickHeld",
                    "type": "Button",
                    "id": "c76aae78-f731-4958-ac32-e1dfe4431297",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "QualityPlus",
                    "type": "Button",
                    "id": "bfc427d7-cc0a-412a-b590-44f2a2981daf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "QualityMinus",
                    "type": "Button",
                    "id": "331f59a3-44b6-4cf6-9df4-be4f539a4878",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "612d8c0f-b519-4247-bb0f-bdb8a376841e",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForwardSwordsmen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79956f7c-9f01-4a79-87b3-c940b8d9345c",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForwardPolearm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69fdd93e-a16f-4cda-8b64-7145c25719f1",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForwardRanger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9988a24a-041b-4d11-b907-7a1ce7ba1ff7",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForwardMage",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6b8055a-63d4-4654-a6a1-6e626842820c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "064e3598-bb49-432a-8ae9-5cea92a647db",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db7271b3-a483-489f-be4d-a9a03d6fd5e4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "486edd05-ce5d-4daf-8e5d-e07a59cfd81d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2cb7d551-db9f-4ba5-94e2-eebf92b6357c",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "B",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5adab91c-15b3-4b6b-8376-2c16bfb757f1",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "920fd036-d859-4d6c-801d-8fe635e49e02",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9efe3954-6753-4d3c-8094-cb96d31309f8",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "124da967-ec9d-4b9e-ada9-b8cb09b6d9bc",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7883612e-7d22-4c13-a178-56b78956fc05",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "147c86d1-16d1-49dd-a235-bace20d5446f",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c948552-b79c-48e0-ba36-172e1dbfd986",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73103ad5-a2d4-4740-9bbc-37f4c83c3f82",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "681036fa-cd67-43e6-974b-5fb541c7113c",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73cda522-d490-4721-8fdd-22a7e1e53be8",
                    "path": "<Keyboard>/equals",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Plus",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29d4377d-e7e2-40d3-b495-bff0bec45714",
                    "path": "<Keyboard>/minus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Minus",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "670159de-ea91-42e7-970e-98ea74dc610c",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26ad4fd8-782a-4b76-bf46-8adddcc21c44",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=0.01)",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClickHeld",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4cf89e5d-0e37-415f-a81b-c8f90c123aa5",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold(duration=0.1)",
                    "processors": "",
                    "groups": "",
                    "action": "RightClickHeld",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94975bf7-14a3-4556-a9b3-4482db212231",
                    "path": "<Keyboard>/rightBracket",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QualityPlus",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca135be9-637b-4330-a2de-cda8ef04f115",
                    "path": "<Keyboard>/leftBracket",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QualityMinus",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Map",
            "id": "a0d66e9d-9aae-4226-876b-b83ebcbedbd6",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": []
}